# competitie-planner.nl

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  list_superadmins.py  list_users.py  mypy.ini  pyproject.toml  reset_admin.py  test_out.txt  update_pass.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_payments.py  003_wedstrijden.py  004_timeslots.py  005_tijdslot_config.py  006_iban_encryption.py  007_composite_indexes.py  20260409_add_sponsor_fields.py  20260412_add_competitie_format_fields.py  20260412_add_toewijzing_snapshots.py  20260502_gesponsord_status.py  709d46bc8b51_catch_up_models.py  7fe8f3932311_add_unique_constraint_teams_team_name_.py  9ac07d06ca65_add_missing_club_fields.py
backend/app/: __init__.py  cache.py  config.py  db.py  exceptions.py  limiter.py  logging_config.py  main.py  mypy.ini
backend/app/bootstrap/: __init__.py  application.py  auto_migrate.py  exceptions.py  health.py  lifecycle.py  middleware.py  monitoring.py
backend/app/cli/: superadmin.py
backend/app/middleware/: __init__.py  logging.py  request_size.py
backend/app/models/: __init__.py  baan.py  baan_toewijzing.py  beschikbaarheid.py  club.py  competitie.py  competition_price.py  invite_token.py  mollie_config.py  team.py  (+9 more)
backend/tests/: __init__.py  conftest.py  test_auth.py  test_competities.py  test_customer_journeys.py  test_onboarding.py  test_planning.py  test_superadmin_journeys.py
(+268 files in other folders)
