[project]
name = "competitie-planner-backend"
version = "0.1.0"
description = "Backend API for Competitie-Planner"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "pydantic[email]",
    "cryptography>=43.0.0",
    "slowapi>=0.1.9",
    "reportlab>=4.4.10",
    "qrcode>=8.2",
    "pillow>=12.2.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
    "factory-boy>=3.3.0",
]
test = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
    "factory-boy>=3.3.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
]

[tool.setup.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
